tests/testcases/errors/BCE0089-5.boo
"""
BCE0089-5.boo(7,11): BCE0089: Type 'Foo' already has a definition for 'bar'.
"""
class Foo:
	bar
	
	event bar as System.EventHandler
